# data_analysis

./: .gitignore  ALGORITHM_DESIGN_SPEC.docx  ALGORITHM_DESIGN_SPEC.md  API.md  BUILD.md  CODE_REVIEW_FIXES.md  DEPLOYMENT.md  DEVELOPER.md  DOCUMENTATION_UPDATES.md  MANIFEST.in  QUICKSTART.md  README.md  build_package.py  config.yaml.example  main.py.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
d_a/: __init__.py  analysis_service.py  batch_result_aggregator.py  config.py  dispatcher.py  errors.py  kafka_client.py  main.py  offset_manager.py  parser_base.py  service_base.py
data_analysis/: __init__.py  analysis_service.py  config.py  dispatcher.py  kafka_client.py  kafka_producer.py  main.py  parser_base.py
docs/: ALGORITHM_DESIGN_SPEC.md  API.md  BATCH_RESULT_AGGREGATION.md  BATCH_UPLOAD_ARCHITECTURE.md  BATCH_UPLOAD_USAGE.md  CHANGELOG_MULTI_CONSUMER.md  DATA_QUALITY_CHECK.md  DEPLOYMENT.md  DEVELOPER.md  EXTRACT_STATION_DATA_FIX.md  GLOBAL_DATA_CACHE.md  MULTI_CONSUMER_EMPTY_FETCH_DIAGNOSIS.md  MULTI_CONSUMER_SOLUTION.md  OFFSET_FIX_SUMMARY.md  OFFSET_OUT_OF_RANGE_FIX.md  OFFSET_OUT_OF_RANGE_SOLUTION.md  RACE_CONDITION_FIX.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md
scripts/: generate_docx.py  update_all_parsers.py
tests/: README.md  __init__.py  run_tests.py  test_async_service.py  test_batch_upload.py  test_config_and_topics.py  test_data_generation.py  test_dependency.py  test_dispatcher.py  test_dispatcher_padding.py  test_extract_station_data.py  test_extreme_and_integration.py  test_fixtures.py  test_integration_extra.py  test_kafka_consume.py  test_kafka_integration.py  test_kafka_upload.py  (+8 more)
(+56 files in other folders)
