[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_analysis"
version = "2.0.0"
description = "充电站数据分析解析模块 - 从Kafka获取数据，解析并分发给各业务模块"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "fenwickxie", email = "fenwickxie@outlook.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["kafka", "data-analysis", "charging-station", "data-processing"]
dependencies = [
    "kafka-python>=2.2.15",
    "numpy>=1.21.2",
    "aiokafka>=0.12.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/fenwickxie/data_analysis.git"
Documentation = "https://github.com/fenwickxie/data_analysis/blob/develop/README.md"
Repository = "https://github.com/fenwickxie/data_analysis.git"
Issues = "https://github.com/fenwickxie/data_analysis/issues"

[tool.setuptools]
packages = ["d_a", "d_a.parsers", "d_a.topic_parsers"]

[tool.setuptools.package-data]
d_a = [
    "*.yaml",
    "*.yml",
    "../README.md",
    "../QUICKSTART.md",
    "../LICENSE",
    "../requirements.txt",
    "../config.yaml.example",
    "../main.py.example",
]

[tool.setuptools.exclude-package-data]
d_a = ["main.py"]
